<resources>

    <!-- 应用名称 -->
    <string name="app_name">Todo</string>

    <!-- 键盘名称 （设置里用的）ᡐᡆᡑᡆ ᡏᡆᡊᡎᡆᠯ ᡋᡅᡒᡅᡎ 托忒蒙文-->
    <string name="keyboard_name">Todo Mongol Bichig</string>

    <!-- 按钮文本 -->
    <string name="button_activate">ᡍᡄᠷᡄᡎᠯᡄᡎᡄ ᡑᡉ ᡆᠷᡇᡇᠯᡍᡇ</string>
    <string name="button_choose_ime">ᡆᠷᡇᡇᠯᡍᡇ ᠠᠷᡎᠠ ᡅᡎᡅ ᠰᡆᡊᡎᡇᡍᡇ</string>
    <string name="button_copy">ᡍᡇᡇᠯᡍᡇ</string>
    <string name="button_paste">ᠨᠠᡃᡍᡇ</string>
    <string name="button_share">ᡍᡇᡋᠠᡃᠯᡔᠠᡍᡇ</string>

    <!-- 复制按钮按完的提示 -->
    <string name="text_copied">ᡍᡇᡇᠯᡋᠠᡅ</string>
    <string name="help">ᠬᠠᠪᠰᠣᠷᠣᠮᠵᠢ</string>
    <string name="contact_url">http://www.studymongolian.net/contact-zh/</string>
    <string name="show_system_keyboards_option">ᠰᡆᡊᡎᡇᡍᡇ</string>

</resources>
